@startuml Dominio_del_problema
class Risorsa{
    titolo: String
    dataPubblicazione: Date
    Editore: String
    Lingua: String
    Formato: String
}

class Articolo extends Risorsa{
    DOI: String
    Disciplina: String
}
class Libro extends Risorsa{
    ISBN: String
    Genere: String
    Tipo: String
    Prezzo: Double
}
class Autore{
    Nome: String
    Cognome: String
}
class Evento{
    Indirizzo: String
    StrutturaOspitante: String
    DataInizio: Date
    DataFine: Date
    Responsabile: String
}
class Presentazione extends Evento
class Conferenza extends Evento{
    Nome: String
}
class Rivista{
    Nome: String
    Argomento: String
    DataPubblicazione: Date
    Responsabile: String
    Prezzo: Double

}
class Serie{
    Nome: String
    ISSN: String
}
class Negozio{
    Nome: String
    Tipo: String
}

class Utente{
        Username: String 
        Password: String
        Permessi: Int
}

class Richiesta{

}

class Notifica

Risorsa "1,N"-left-"1,N" Autore
Articolo "1,N"--"0,1" Rivista
Articolo "1,N"--"0,1" Conferenza
Libro "1"--"0,1" Presentazione
Libro "1,N"--"0,1" Serie
Libro "0,N"--"0,N" Negozio
Risorsa "0,N"-right-"1" Utente
Utente "1"-right-"O,N" Notifica



@enduml